Fix whatwedo layout: use column padding instead of row gap
Row gap broke flexboxgrid layout (stacked columns vertically).
Use col-md-6 padding for spacing between image and content.

--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -110,7 +110,10 @@
 
     h2 { margin-bottom: 35px; }
 
-    .row { gap: 51px; }
+    .col-md-6 {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
 
     .whatwedo-list {
         display: flex;
